objects/com_smartsheet__Smartsheet__c.object
<CustomObject>
    <customHelpPage>com_smartsheet__SmartsheetHelp</customHelpPage>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipName>Smartsheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Smartsheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Smartsheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Smartsheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__Description__c</fullName>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Smartsheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>com_smartsheet__SmartsheetKey__c</fullName>
        <description>Smartsheet key to identify object.</description>
        <label>SmartsheetKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Smartsheet Link</label>
    <listViews>
        <fullName>com_smartsheet__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Smartsheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Smartsheet Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>